elliptic/envoy/envoyproxyparameter/httproutea.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: gatewayclass-gracefulshutdown
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-gracefulshutdown
spec:
  gatewayClassName: gatewayclass-gracefulshutdown
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: graceful-shutdown-config
  listeners:
    - name: http
      protocol: HTTP
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-gracefulshutdown
spec:
  parentRefs:
    - name: gateway-gracefulshutdown
  hostnames:
    - "www.example.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: servicea
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /servicea
